// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`date > 42 > anytime > with only Date refDate 1`] = `2020-11-22T03:05:50.087Z`;

exports[`date > 42 > anytime > with only number refDate 1`] = `2020-11-22T03:05:50.087Z`;

exports[`date > 42 > anytime > with only string refDate 1`] = `2020-11-22T03:05:50.087Z`;

exports[`date > 42 > between > with Date dates 1`] = `2021-03-15T19:30:57.115Z`;

exports[`date > 42 > between > with mixed dates 1`] = `2021-03-15T19:30:57.115Z`;

exports[`date > 42 > between > with string dates 1`] = `2021-03-15T19:30:57.115Z`;

exports[`date > 42 > betweens > with Date dates 1`] = `
[
  2021-03-15T19:30:57.115Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > 42 > betweens > with Date dates and count 1`] = `
[
  2021-03-02T22:04:55.366Z,
  2021-03-15T19:30:57.115Z,
  2021-03-29T00:52:30.236Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > 42 > betweens > with Date dates and count range 1`] = `
[
  2021-03-02T22:04:55.366Z,
  2021-03-29T00:52:30.236Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > 42 > betweens > with mixed dates 1`] = `
[
  2021-03-15T19:30:57.115Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > 42 > betweens > with string dates 1`] = `
[
  2021-03-15T19:30:57.115Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > 42 > betweens > with string dates and count 1`] = `
[
  2021-03-02T22:04:55.366Z,
  2021-03-15T19:30:57.115Z,
  2021-03-29T00:52:30.236Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > 42 > birthdate > with age and refDate 1`] = `1980-07-07T19:06:53.165Z`;

exports[`date > 42 > birthdate > with age mode and refDate 1`] = `1963-09-27T06:10:42.813Z`;

exports[`date > 42 > birthdate > with age range and refDate 1`] = `1962-12-27T20:14:08.437Z`;

exports[`date > 42 > birthdate > with only refDate 1`] = `1964-03-22T08:05:48.849Z`;

exports[`date > 42 > birthdate > with year and refDate 1`] = `0020-07-07T19:06:53.165Z`;

exports[`date > 42 > birthdate > with year mode and refDate 1`] = `1964-03-22T08:05:48.849Z`;

exports[`date > 42 > birthdate > with year range and refDate 1`] = `0057-12-20T11:59:38.353Z`;

exports[`date > 42 > future > with only Date refDate 1`] = `2021-07-08T10:07:33.524Z`;

exports[`date > 42 > future > with only number refDate 1`] = `2021-07-08T10:07:33.524Z`;

exports[`date > 42 > future > with only string refDate 1`] = `2021-07-08T10:07:33.524Z`;

exports[`date > 42 > future > with value 1`] = `2024-11-19T18:52:08.216Z`;

exports[`date > 42 > month > noArgs 1`] = `"May"`;

exports[`date > 42 > month > with abbreviated = true 1`] = `"May"`;

exports[`date > 42 > month > with abbreviated = true and context = true 1`] = `"May"`;

exports[`date > 42 > month > with context = true 1`] = `"May"`;

exports[`date > 42 > past > with only Date refDate 1`] = `2020-10-08T00:10:57.898Z`;

exports[`date > 42 > past > with only number refDate 1`] = `2020-10-08T00:10:57.898Z`;

exports[`date > 42 > past > with only string refDate 1`] = `2020-10-08T00:10:57.898Z`;

exports[`date > 42 > past > with value 1`] = `2017-05-26T15:26:23.206Z`;

exports[`date > 42 > recent > with only Date refDate 1`] = `2021-02-21T08:09:54.819Z`;

exports[`date > 42 > recent > with only number refDate 1`] = `2021-02-21T08:09:54.819Z`;

exports[`date > 42 > recent > with only string refDate 1`] = `2021-02-21T08:09:54.819Z`;

exports[`date > 42 > recent > with value 1`] = `2021-02-17T23:15:52.423Z`;

exports[`date > 42 > soon > with only Date refDate 1`] = `2021-02-22T02:08:36.603Z`;

exports[`date > 42 > soon > with only number refDate 1`] = `2021-02-22T02:08:36.603Z`;

exports[`date > 42 > soon > with only string refDate 1`] = `2021-02-22T02:08:36.603Z`;

exports[`date > 42 > soon > with value 1`] = `2021-02-25T11:02:38.999Z`;

exports[`date > 42 > weekday > noArgs 1`] = `"Tuesday"`;

exports[`date > 42 > weekday > with abbreviated = true 1`] = `"Tue"`;

exports[`date > 42 > weekday > with abbreviated = true and context = true 1`] = `"Tue"`;

exports[`date > 42 > weekday > with context = true 1`] = `"Tuesday"`;

exports[`date > 1211 > anytime > with only Date refDate 1`] = `2021-12-31T12:49:38.858Z`;

exports[`date > 1211 > anytime > with only number refDate 1`] = `2021-12-31T12:49:38.858Z`;

exports[`date > 1211 > anytime > with only string refDate 1`] = `2021-12-31T12:49:38.858Z`;

exports[`date > 1211 > between > with Date dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > 1211 > between > with mixed dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > 1211 > between > with string dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > 1211 > betweens > with Date dates 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > 1211 > betweens > with Date dates and count 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-02T08:42:57.721Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
  2021-04-21T13:18:14.822Z,
]
`;

exports[`date > 1211 > betweens > with Date dates and count range 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-02T08:42:57.721Z,
  2021-04-03T02:52:39.944Z,
  2021-04-15T10:20:25.794Z,
  2021-04-21T13:18:14.822Z,
]
`;

exports[`date > 1211 > betweens > with mixed dates 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > 1211 > betweens > with string dates 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > 1211 > betweens > with string dates and count 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-02T08:42:57.721Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
  2021-04-21T13:18:14.822Z,
]
`;

exports[`date > 1211 > birthdate > with age and refDate 1`] = `1981-01-26T13:16:31.426Z`;

exports[`date > 1211 > birthdate > with age mode and refDate 1`] = `1998-08-21T21:24:31.101Z`;

exports[`date > 1211 > birthdate > with age range and refDate 1`] = `1996-10-13T01:44:07.954Z`;

exports[`date > 1211 > birthdate > with only refDate 1`] = `1998-07-25T13:16:47.251Z`;

exports[`date > 1211 > birthdate > with year and refDate 1`] = `0021-01-26T13:16:31.426Z`;

exports[`date > 1211 > birthdate > with year mode and refDate 1`] = `1998-07-25T13:16:47.251Z`;

exports[`date > 1211 > birthdate > with year range and refDate 1`] = `0113-12-03T19:45:28.165Z`;

exports[`date > 1211 > future > with only Date refDate 1`] = `2022-01-26T14:59:27.356Z`;

exports[`date > 1211 > future > with only number refDate 1`] = `2022-01-26T14:59:27.356Z`;

exports[`date > 1211 > future > with only string refDate 1`] = `2022-01-26T14:59:27.356Z`;

exports[`date > 1211 > future > with value 1`] = `2030-06-03T19:31:11.518Z`;

exports[`date > 1211 > month > noArgs 1`] = `"December"`;

exports[`date > 1211 > month > with abbreviated = true 1`] = `"Dec"`;

exports[`date > 1211 > month > with abbreviated = true and context = true 1`] = `"Dec"`;

exports[`date > 1211 > month > with context = true 1`] = `"December"`;

exports[`date > 1211 > past > with only Date refDate 1`] = `2020-03-19T19:19:04.066Z`;

exports[`date > 1211 > past > with only number refDate 1`] = `2020-03-19T19:19:04.066Z`;

exports[`date > 1211 > past > with only string refDate 1`] = `2020-03-19T19:19:04.066Z`;

exports[`date > 1211 > past > with value 1`] = `2011-11-12T14:47:19.904Z`;

exports[`date > 1211 > recent > with only Date refDate 1`] = `2021-02-20T18:52:11.498Z`;

exports[`date > 1211 > recent > with only number refDate 1`] = `2021-02-20T18:52:11.498Z`;

exports[`date > 1211 > recent > with only string refDate 1`] = `2021-02-20T18:52:11.498Z`;

exports[`date > 1211 > recent > with value 1`] = `2021-02-12T10:18:34.226Z`;

exports[`date > 1211 > soon > with only Date refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > 1211 > soon > with only number refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > 1211 > soon > with only string refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > 1211 > soon > with value 1`] = `2021-03-02T23:59:57.196Z`;

exports[`date > 1211 > weekday > noArgs 1`] = `"Saturday"`;

exports[`date > 1211 > weekday > with abbreviated = true 1`] = `"Sat"`;

exports[`date > 1211 > weekday > with abbreviated = true and context = true 1`] = `"Sat"`;

exports[`date > 1211 > weekday > with context = true 1`] = `"Saturday"`;

exports[`date > 1337 > anytime > with only Date refDate 1`] = `2020-08-31T23:49:36.013Z`;

exports[`date > 1337 > anytime > with only number refDate 1`] = `2020-08-31T23:49:36.013Z`;

exports[`date > 1337 > anytime > with only string refDate 1`] = `2020-08-31T23:49:36.013Z`;

exports[`date > 1337 > between > with Date dates 1`] = `2021-03-09T04:11:24.661Z`;

exports[`date > 1337 > between > with mixed dates 1`] = `2021-03-09T04:11:24.661Z`;

exports[`date > 1337 > between > with string dates 1`] = `2021-03-09T04:11:24.661Z`;

exports[`date > 1337 > betweens > with Date dates 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
]
`;

exports[`date > 1337 > betweens > with Date dates and count 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
  2021-03-12T15:42:07.228Z,
  2021-03-20T19:33:45.512Z,
]
`;

exports[`date > 1337 > betweens > with Date dates and count range 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-10T02:59:27.388Z,
  2021-03-20T19:33:45.512Z,
]
`;

exports[`date > 1337 > betweens > with mixed dates 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
]
`;

exports[`date > 1337 > betweens > with string dates 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
]
`;

exports[`date > 1337 > betweens > with string dates and count 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
  2021-03-12T15:42:07.228Z,
  2021-03-20T19:33:45.512Z,
]
`;

exports[`date > 1337 > birthdate > with age and refDate 1`] = `1980-05-27T14:46:44.794Z`;

exports[`date > 1337 > birthdate > with age mode and refDate 1`] = `1956-08-25T03:56:58.153Z`;

exports[`date > 1337 > birthdate > with age range and refDate 1`] = `1956-02-15T21:16:37.850Z`;

exports[`date > 1337 > birthdate > with only refDate 1`] = `1957-03-31T18:18:16.563Z`;

exports[`date > 1337 > birthdate > with year and refDate 1`] = `0020-05-27T14:46:44.794Z`;

exports[`date > 1337 > birthdate > with year mode and refDate 1`] = `1957-03-31T18:18:16.563Z`;

exports[`date > 1337 > birthdate > with year range and refDate 1`] = `0046-08-09T19:19:14.289Z`;

exports[`date > 1337 > future > with only Date refDate 1`] = `2021-05-28T08:29:26.600Z`;

exports[`date > 1337 > future > with only number refDate 1`] = `2021-05-28T08:29:26.600Z`;

exports[`date > 1337 > future > with only string refDate 1`] = `2021-05-28T08:29:26.600Z`;

exports[`date > 1337 > future > with value 1`] = `2023-10-06T02:30:57.962Z`;

exports[`date > 1337 > month > noArgs 1`] = `"April"`;

exports[`date > 1337 > month > with abbreviated = true 1`] = `"Apr"`;

exports[`date > 1337 > month > with abbreviated = true and context = true 1`] = `"Apr"`;

exports[`date > 1337 > month > with context = true 1`] = `"April"`;

exports[`date > 1337 > past > with only Date refDate 1`] = `2020-11-18T01:49:04.822Z`;

exports[`date > 1337 > past > with only number refDate 1`] = `2020-11-18T01:49:04.822Z`;

exports[`date > 1337 > past > with only string refDate 1`] = `2020-11-18T01:49:04.822Z`;

exports[`date > 1337 > past > with value 1`] = `2018-07-11T07:47:33.460Z`;

exports[`date > 1337 > recent > with only Date refDate 1`] = `2021-02-21T10:51:56.041Z`;

exports[`date > 1337 > recent > with only number refDate 1`] = `2021-02-21T10:51:56.041Z`;

exports[`date > 1337 > recent > with only string refDate 1`] = `2021-02-21T10:51:56.041Z`;

exports[`date > 1337 > recent > with value 1`] = `2021-02-19T02:16:05.654Z`;

exports[`date > 1337 > soon > with only Date refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > 1337 > soon > with only number refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > 1337 > soon > with only string refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > 1337 > soon > with value 1`] = `2021-02-24T08:02:25.768Z`;

exports[`date > 1337 > weekday > noArgs 1`] = `"Monday"`;

exports[`date > 1337 > weekday > with abbreviated = true 1`] = `"Mon"`;

exports[`date > 1337 > weekday > with abbreviated = true and context = true 1`] = `"Mon"`;

exports[`date > 1337 > weekday > with context = true 1`] = `"Monday"`;

exports[`date > deprecated > 42 > between > with Date dates 1`] = `2021-03-15T19:30:57.115Z`;

exports[`date > deprecated > 42 > between > with string dates 1`] = `2021-03-15T19:30:57.115Z`;

exports[`date > deprecated > 42 > betweens > with Date dates 1`] = `
[
  2021-03-15T19:30:57.115Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > deprecated > 42 > betweens > with Date dates and count 1`] = `
[
  2021-03-02T22:04:55.366Z,
  2021-03-15T19:30:57.115Z,
  2021-03-29T00:52:30.236Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > deprecated > 42 > betweens > with string dates 1`] = `
[
  2021-03-15T19:30:57.115Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > deprecated > 42 > betweens > with string dates and count 1`] = `
[
  2021-03-02T22:04:55.366Z,
  2021-03-15T19:30:57.115Z,
  2021-03-29T00:52:30.236Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > deprecated > 42 > future > with only Date refDate 1`] = `2021-07-08T10:07:33.524Z`;

exports[`date > deprecated > 42 > future > with only number refDate 1`] = `2021-07-08T10:07:33.524Z`;

exports[`date > deprecated > 42 > future > with only string refDate 1`] = `2021-07-08T10:07:33.524Z`;

exports[`date > deprecated > 42 > future > with value 1`] = `2024-11-19T18:52:08.216Z`;

exports[`date > deprecated > 42 > past > with only Date refDate 1`] = `2020-10-08T00:10:57.898Z`;

exports[`date > deprecated > 42 > past > with only number refDate 1`] = `2020-10-08T00:10:57.898Z`;

exports[`date > deprecated > 42 > past > with only string refDate 1`] = `2020-10-08T00:10:57.898Z`;

exports[`date > deprecated > 42 > past > with value 1`] = `2017-05-26T15:26:23.206Z`;

exports[`date > deprecated > 42 > recent > with only Date refDate 1`] = `2021-02-21T08:09:54.819Z`;

exports[`date > deprecated > 42 > recent > with only number refDate 1`] = `2021-02-21T08:09:54.819Z`;

exports[`date > deprecated > 42 > recent > with only string refDate 1`] = `2021-02-21T08:09:54.819Z`;

exports[`date > deprecated > 42 > recent > with value 1`] = `2021-02-17T23:15:52.423Z`;

exports[`date > deprecated > 42 > soon > with only Date refDate 1`] = `2021-02-22T02:08:36.603Z`;

exports[`date > deprecated > 42 > soon > with only number refDate 1`] = `2021-02-22T02:08:36.603Z`;

exports[`date > deprecated > 42 > soon > with only string refDate 1`] = `2021-02-22T02:08:36.603Z`;

exports[`date > deprecated > 42 > soon > with value 1`] = `2021-02-25T11:02:38.999Z`;

exports[`date > deprecated > 1211 > between > with Date dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > deprecated > 1211 > between > with string dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > deprecated > 1211 > betweens > with Date dates 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > deprecated > 1211 > betweens > with Date dates and count 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-02T08:42:57.721Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
  2021-04-21T13:18:14.822Z,
]
`;

exports[`date > deprecated > 1211 > betweens > with string dates 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > deprecated > 1211 > betweens > with string dates and count 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-02T08:42:57.721Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
  2021-04-21T13:18:14.822Z,
]
`;

exports[`date > deprecated > 1211 > future > with only Date refDate 1`] = `2022-01-26T14:59:27.356Z`;

exports[`date > deprecated > 1211 > future > with only number refDate 1`] = `2022-01-26T14:59:27.356Z`;

exports[`date > deprecated > 1211 > future > with only string refDate 1`] = `2022-01-26T14:59:27.356Z`;

exports[`date > deprecated > 1211 > future > with value 1`] = `2030-06-03T19:31:11.518Z`;

exports[`date > deprecated > 1211 > past > with only Date refDate 1`] = `2020-03-19T19:19:04.066Z`;

exports[`date > deprecated > 1211 > past > with only number refDate 1`] = `2020-03-19T19:19:04.066Z`;

exports[`date > deprecated > 1211 > past > with only string refDate 1`] = `2020-03-19T19:19:04.066Z`;

exports[`date > deprecated > 1211 > past > with value 1`] = `2011-11-12T14:47:19.904Z`;

exports[`date > deprecated > 1211 > recent > with only Date refDate 1`] = `2021-02-20T18:52:11.498Z`;

exports[`date > deprecated > 1211 > recent > with only number refDate 1`] = `2021-02-20T18:52:11.498Z`;

exports[`date > deprecated > 1211 > recent > with only string refDate 1`] = `2021-02-20T18:52:11.498Z`;

exports[`date > deprecated > 1211 > recent > with value 1`] = `2021-02-12T10:18:34.226Z`;

exports[`date > deprecated > 1211 > soon > with only Date refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > deprecated > 1211 > soon > with only number refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > deprecated > 1211 > soon > with only string refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > deprecated > 1211 > soon > with value 1`] = `2021-03-02T23:59:57.196Z`;

exports[`date > deprecated > 1337 > between > with Date dates 1`] = `2021-03-09T04:11:24.661Z`;

exports[`date > deprecated > 1337 > between > with string dates 1`] = `2021-03-09T04:11:24.661Z`;

exports[`date > deprecated > 1337 > betweens > with Date dates 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
]
`;

exports[`date > deprecated > 1337 > betweens > with Date dates and count 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
  2021-03-12T15:42:07.228Z,
  2021-03-20T19:33:45.512Z,
]
`;

exports[`date > deprecated > 1337 > betweens > with string dates 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
]
`;

exports[`date > deprecated > 1337 > betweens > with string dates and count 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
  2021-03-12T15:42:07.228Z,
  2021-03-20T19:33:45.512Z,
]
`;

exports[`date > deprecated > 1337 > future > with only Date refDate 1`] = `2021-05-28T08:29:26.600Z`;

exports[`date > deprecated > 1337 > future > with only number refDate 1`] = `2021-05-28T08:29:26.600Z`;

exports[`date > deprecated > 1337 > future > with only string refDate 1`] = `2021-05-28T08:29:26.600Z`;

exports[`date > deprecated > 1337 > future > with value 1`] = `2023-10-06T02:30:57.962Z`;

exports[`date > deprecated > 1337 > past > with only Date refDate 1`] = `2020-11-18T01:49:04.822Z`;

exports[`date > deprecated > 1337 > past > with only number refDate 1`] = `2020-11-18T01:49:04.822Z`;

exports[`date > deprecated > 1337 > past > with only string refDate 1`] = `2020-11-18T01:49:04.822Z`;

exports[`date > deprecated > 1337 > past > with value 1`] = `2018-07-11T07:47:33.460Z`;

exports[`date > deprecated > 1337 > recent > with only Date refDate 1`] = `2021-02-21T10:51:56.041Z`;

exports[`date > deprecated > 1337 > recent > with only number refDate 1`] = `2021-02-21T10:51:56.041Z`;

exports[`date > deprecated > 1337 > recent > with only string refDate 1`] = `2021-02-21T10:51:56.041Z`;

exports[`date > deprecated > 1337 > recent > with value 1`] = `2021-02-19T02:16:05.654Z`;

exports[`date > deprecated > 1337 > soon > with only Date refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > deprecated > 1337 > soon > with only number refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > deprecated > 1337 > soon > with only string refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > deprecated > 1337 > soon > with value 1`] = `2021-02-24T08:02:25.768Z`;
